@@ -1,25 +1,29 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '2.7.3'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'org.springframework.boot' version '3.5.0'
+	id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'com.bubbleshop'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
 	maven {url "https://packages.confluent.io/maven" }
 }
 
+java {
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(21)
+	}
+}
+
 ext {
-	lombokVersion = '1.18.22'
-	flywayVersion = '7.15.0'
+	lombokVersion = '1.18.30'
 	mapStructVersion = '1.5.5.Final'
 	lombokMapstructBindVersion = '0.2.0'
-	querydslVersion = '5.0.0'
-	springCloudVersion = '2021.0.3'
+	querydslVersion = '5.1.0'
+	springCloudVersion = '2025.0.0'
 	openApiVersion = '1.8.0'
 	awsSdkBomVersion = '1.12.529'
 	localstackVersion = '0.2.23'
@@ -44,6 +48,7 @@ dependencies {
 
 	//redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	testImplementation 'it.ozimov:embedded-redis:0.7.2'
 
 	//lombok
 	compileOnly "org.projectlombok:lombok:${lombokVersion}"
@@ -64,26 +69,25 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	// mapstruct
-	implementation "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindVersion}"
-
-	annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
-	annotationProcessor 'org.projectlombok:lombok'
 	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindVersion}"
-
 	implementation "org.mapstruct:mapstruct:${mapStructVersion}"
+	annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
 
 	//mysql
-	implementation 'mysql:mysql-connector-java'
+	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.h2database:h2'
 
 	//querydsl
-	implementation group: 'com.querydsl', name: 'querydsl-jpa', version: querydslVersion
-	implementation group: 'com.querydsl', name: 'querydsl-apt', version: querydslVersion
-	implementation group: 'com.querydsl', name: 'querydsl-core', version: querydslVersion
-	annotationProcessor group: 'com.querydsl', name: 'querydsl-apt', version: querydslVersion, classifier: 'jpa'
+	implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
+	implementation "com.querydsl:querydsl-core:${querydslVersion}"
+	annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
+	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
+	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
 
 	//flyway
-	implementation "org.flywaydb:flyway-core:${flywayVersion}"
+	implementation 'org.flywaydb:flyway-core'
+	implementation 'org.flywaydb:flyway-mysql'
 
 	//mockito
 	testImplementation('org.mockito:mockito-inline:4.3.1')
@@ -109,6 +113,13 @@ dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
+}
+
+tasks.withType(JavaCompile).configureEach {
+	options.compilerArgs.addAll([
+			'--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+			'--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'
+	])
 }
 
 test {
